修改启动脚本VM参数